@@ -1,4 +1,9 @@
 ----- cvs ci ------
+Thu Dec  7 22:21:25 UTC 2000
+sms:
++ added keyword filelist
+
+----- cvs ci ------
 Thu Dec  7 21:12:01 UTC 2000
 sms:
 * fixed memory hole in freeLink
